[package]
name = "url-shortening"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["serde_derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.2", features = ["add-extension", "auth", "compression-full", "trace"] }
